# autonomousGrasping

./: .gitignore  CMakeLists.txt  README.md  Readme.txt
despot_ext/: CMakeLists.txt
despot_ext/include/: DeepLearningSolver.h  DespotWithLearnedDefaultPolicy.h  LearningModel.h  LearningPlanningSolver.h  LearningSolverBase.h  PlanningDiffParamsSolver.h  UserDefinedActionSolver.h  ext_tui.h  history_with_reward.h
despot_ext/src/: DeepLearningSolver.cpp  DespotWithLearnedDefaultPolicy.cpp  LearningModel.cpp  LearningPlanningSolver.cpp
graspingV4/: CMakeLists.txt
graspingV4/commands/: toy_test.yaml  toy_train.yaml
graspingV4/config_files/: toy_test.yaml  toy_test_combined_0-15.yaml  toy_test_combined_0-20.yaml  toy_test_combined_0.yaml  toy_test_combined_1.yaml  toy_test_combined_2.yaml  toy_test_combined_3-90.yaml  toy_train.yaml  toy_train_combined_0-15.yaml  toy_train_combined_0-20.yaml  toy_train_combined_0.yaml  toy_train_combined_1.yaml  toy_train_combined_2.yaml  toy_train_combined_3-90.yaml
graspingV4/src/: grasping_tui.h  grasping_v4.cpp  grasping_v4.h  grasping_v4_particle_belief.h  main.cpp
grasping_despot_box2D/: CMakeLists.txt  CMakeLists.txt~
grasping_despot_box2D/data/: barretthand_fingertip.sensors.yaml  barretthand_links.sensors.yaml  barretthand_twofinger.object.yaml  circle.object.yaml  mug.object.yaml  ricepilaf.object.yaml
grasping_despot_box2D/src/: GraspingObservationBox2D.h  GraspingStateBox2D.h  box2d_grasping_world.cpp  box2d_grasping_world.h  grasping_box2D.cpp  grasping_box2D.h  main.cpp  step_visualize_main.cpp
grasping_ros_mico/: CMakeLists.txt  Readme.txt  g3db_meshes  manifest.xml
grasping_ros_mico/commands/: commands.txt  commands_rls.txt
grasping_ros_mico/config_files/: RealArmInterface.yaml  RealArmInterfaceMultiCylinderObjectTest8cm_low_friction_table.yaml  RealArmInterfaceMultiCylinderObjectTest8cm_low_friction_table_combined_0-15.yaml  RealArmInterfaceMultiCylinderObjectTest8cm_low_friction_table_combined_0-20.yaml  RealArmInterfaceMultiCylinderObjectTest8cm_low_friction_table_combined_1.yaml  RealArmInterfaceMultiCylinderObjectTest8cm_low_friction_table_combined_2.yaml  RealArmInterfaceMultiCylinderObjectTest8cm_low_friction_table_combined_3-50.yaml  VrepDataInterface.yaml  VrepDataInterfaceMultiCylinderObjectTest75mm_automatic_2.yaml  VrepDataInterfaceMultiCylinderObjectTest75mm_low_friction_table.yaml  VrepDataInterfaceMultiCylinderObjectTest75mm_low_friction_table_combined_0-15.yaml  VrepDataInterfaceMultiCylinderObjectTest75mm_low_friction_table_combined_0-20.yaml  VrepDataInterfaceMultiCylinderObjectTest75mm_low_friction_table_combined_1.yaml  VrepDataInterfaceMultiCylinderObjectTest75mm_low_friction_table_combined_2.yaml  VrepDataInterfaceMultiCylinderObjectTest75mm_low_friction_table_combined_3-50.yaml  VrepDataInterfaceMultiCylinderObjectTest7cm.yaml  VrepDataInterfaceMultiCylinderObjectTest7cm_automatic.yaml  VrepDataInterfaceMultiCylinderObjectTest7cm_low_friction_table.yaml  VrepDataInterfaceMultiCylinderObjectTest7cm_low_friction_table_combined_0-15.yaml  VrepDataInterfaceMultiCylinderObjectTest7cm_low_friction_table_combined_0-20.yaml  VrepDataInterfaceMultiCylinderObjectTest7cm_low_friction_table_combined_1.yaml  VrepDataInterfaceMultiCylinderObjectTest7cm_low_friction_table_combined_2.yaml  VrepDataInterfaceMultiCylinderObjectTest7cm_low_friction_table_combined_3-50.yaml  VrepDataInterfaceMultiCylinderObjectTest85mm_low_friction_table.yaml  VrepDataInterfaceMultiCylinderObjectTest85mm_low_friction_table_combined_0-15.yaml  VrepDataInterfaceMultiCylinderObjectTest85mm_low_friction_table_combined_0-20.yaml  VrepDataInterfaceMultiCylinderObjectTest85mm_low_friction_table_combined_1.yaml  VrepDataInterfaceMultiCylinderObjectTest85mm_low_friction_table_combined_2.yaml  VrepDataInterfaceMultiCylinderObjectTest85mm_low_friction_table_combined_3-50.yaml  VrepDataInterfaceMultiCylinderObjectTest85mm_low_friction_table_combined_4.yaml  VrepDataInterfaceMultiCylinderObjectTest8cm.yaml  VrepDataInterfaceMultiCylinderObjectTest8cm_low_friction_table.yaml  VrepDataInterfaceMultiCylinderObjectTest8cm_low_friction_table_combined_0-15.yaml  VrepDataInterfaceMultiCylinderObjectTest8cm_low_friction_table_combined_0-20.yaml  VrepDataInterfaceMultiCylinderObjectTest8cm_low_friction_table_combined_1.yaml  VrepDataInterfaceMultiCylinderObjectTest8cm_low_friction_table_combined_2.yaml  VrepDataInterfaceMultiCylinderObjectTest8cm_low_friction_table_combined_3-50.yaml  VrepDataInterfaceMultiCylinderObjectTest9cm.yaml  VrepDataInterfaceMultiCylinderObjectTest9cm_low_friction_table.yaml  VrepDataInterfaceMultiCylinderObjectTest9cm_low_friction_table_combined_0-15.yaml  (+429 more)
grasping_ros_mico/g3db_object_labels/: 104_toaster_final-18-Dec-2015-13-56-59.yaml  104_toaster_final-22-Dec-2015-06-18-12.yaml  106_urn_final-19-Nov-2015-11-43-45.yaml  106_urn_final-22-Dec-2015-15-44-55.yaml  109_crab_final-01-Mar-2016-15-53-28.yaml  109_crab_final-02-Mar-2016-13-27-22.yaml  109_crab_final-02-Mar-2016-13-38-29.yaml  109_crab_final-28-Feb-2016-18-58-15.yaml  109_crab_final-28-Feb-2016-18-58-16.yaml  109_crab_final-28-Feb-2016-18-58-19.yaml  109_crab_final-28-Feb-2016-18-58-26.yaml  11_cheese_final-03-Mar-2016-18-50-46.yaml  11_cheese_final-04-Mar-2016-17-51-11.yaml  11_cheese_final-04-Mar-2016-18-05-01.yaml  11_cheese_final-05-Mar-2016-15-14-21.yaml  11_cheese_final-05-Mar-2016-15-38-42.yaml  11_cheese_final-06-Mar-2016-12-36-08.yaml  11_cheese_final-06-Mar-2016-13-10-13.yaml  11_cheese_final-24-Dec-2015-13-31-20.yaml  16_bottle_opener_final-03-Mar-2016-18-50-49.yaml  16_bottle_opener_final-05-Mar-2016-15-13-48.yaml  16_bottle_opener_final-06-Mar-2016-12-27-06.yaml  16_bottle_opener_final-06-Mar-2016-12-37-00.yaml  17_Pot_lid_final-03-Mar-2016-18-50-37.yaml  17_Pot_lid_final-03-Mar-2016-18-50-39.yaml  18_garbage_box_final-20-Jan-2016-07-48-08.yaml  19_Hammer_final-03-Mar-2016-18-50-41.yaml  19_Hammer_final-03-Mar-2016-18-50-44.yaml  1_Coffeecup_final-03-Mar-2016-18-50-40.yaml  1_Coffeecup_final-10-Dec-2015-06-58-01.yaml  24_bowl-02-Mar-2016-07-03-29.yaml  (+201 more)
(+20952 files in other folders)
